# Astrology_The_Space_Science

./: .gitignore  README.md  north_indian_kundali.py  render.yaml
backend/: app.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: chart.py  dasha.py  divisional.py  i18n.py  traditional_strength.py  transits.py  varshphal.py  yogas.py
backend/app/astrology/: __init__.py  aspects.py  constants.py  engine.py  houses.py  panchang.py  planets.py  schemas.py  strengths.py  time.py  traditional_strength.py  zodiac.py
backend/app/astrology/charts/: __init__.py  north_indian.py
backend/app/astrology/dasha/: __init__.py  interpretations.py  registry.py  schemas.py  vimshottari.py
backend/app/astrology/divisional/: __init__.py  base.py  engine.py  rules.py
backend/app/astrology/interpretations/: __init__.py  composer.py  loader.py
backend/app/astrology/reports/: engine.py  sections.py
backend/app/astrology/varga/: __init__.py  base.py  calculator.py  engine.py  mappings.py  rules.py
backend/app/astrology/varshphal/: __init__.py  annual_block.py  engine.py  interpretation.py  mudda_dasha.py  muntha.py  sahams.py  schemas.py  solar_return.py  strength_analysis.py  (+2 more)
backend/app/core/: config.py  security.py
backend/app/database/: session.py
backend/app/i18n/: __init__.py  locales.py
backend/app/services/: chart_service.py  dasha_service.py  report_service.py  user_service.py  varshphal_service.py
backend/vedic_astrology_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+129 files in other folders)
