[project]
name = "vedic-astrology-backend"
version = "0.1.0"
description = "FastAPI backend and Swiss Ephemeris astrology engine for a Vedic astrology platform."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.115",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "psycopg[binary]>=3.2",
    "pyswisseph>=2.10",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
